[gd_scene load_steps=3 format=3 uid="uid://yd8yokj46j38"]

[ext_resource type="Script" path="res://main.gd" id="1_aqoux"]
[ext_resource type="Script" path="res://Btn_StartGameKey.gd" id="2_h0ijg"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aqoux")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
offset_left = 25.0
offset_top = 25.0
offset_right = 1127.0
offset_bottom = 623.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_right = 1102.0
offset_bottom = 70.0

[node name="current_game_exe" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
offset_right = 1102.0
offset_bottom = 26.0
text = "Game .exe: %GAME_FOLDER_PATH%"

[node name="current_mod_folder" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
offset_top = 30.0
offset_right = 1102.0
offset_bottom = 56.0
text = "Mod Folder: %MOD_FOLDER_PATH%"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
anchors_preset = 0
offset_top = 60.0
offset_right = 1102.0
offset_bottom = 70.0

[node name="Btn_GameExe" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 74.0
offset_right = 1102.0
offset_bottom = 105.0
mouse_default_cursor_shape = 2
text = "Game .exe"

[node name="Btn_ModFolder" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 109.0
offset_right = 1102.0
offset_bottom = 140.0
mouse_default_cursor_shape = 2
text = "Mod Folder"

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
anchors_preset = 0
offset_top = 144.0
offset_right = 1102.0
offset_bottom = 154.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 158.0
offset_right = 1102.0
offset_bottom = 184.0
text = "Start Game Key:"

[node name="Btn_StartGameKey" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 188.0
offset_right = 1102.0
offset_bottom = 219.0
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
toggle_mode = true
text = "%SOME_KEY%"
script = ExtResource("2_h0ijg")

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
anchors_preset = 0
offset_top = 223.0
offset_right = 1102.0
offset_bottom = 233.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 237.0
offset_right = 1102.0
offset_bottom = 263.0
text = "Runner Script Name:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
offset_top = 267.0
offset_right = 1102.0
offset_bottom = 298.0
placeholder_text = "runner.cmd"

[node name="FileDialog" type="FileDialog" parent="MarginContainer"]
title = "Open a File or Directory"
position = Vector2i(30, 35)
size = Vector2i(1100, 600)
ok_button_text = "Open"
file_mode = 3
access = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/Btn_GameExe" to="." method="_on_btn_game_folder_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Btn_ModFolder" to="." method="_on_btn_mod_folder_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Btn_StartGameKey" to="MarginContainer/VBoxContainer/Btn_StartGameKey" method="_toggled"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="dir_selected" from="MarginContainer/FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="file_selected" from="MarginContainer/FileDialog" to="." method="_on_file_dialog_file_selected"]
